# docker-tensorflow

./: .editorconfig  .gitattributes  .gitignore  CITATION.cff  README.md
.github/workflows/: docker_publish.yml
src/pytorch/: Dockerfile
src/pytorch/etc/: pyproject.toml
