[tool.poetry]
name = "my-pytorch-app"
version = "0.1.0"
description = "A simple PyTorch project using Docker and Poetry."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.0+cu113-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.0+cu113-cp38-cp38-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/torchaudio-0.12.0+cu113-cp38-cp38-linux_x86_64.whl"}
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
