# -*- coding: utf-8 -*-


# =============================================================================
# Project Configuration
# =============================================================================

[tool.poetry]
name = "my-pytorch-app"
version = "0.1.0"
description = "A simple PyTorch project using Docker and Poetry."
authors = ["Your Name <you@example.com>"]


# =============================================================================
# Dependencies
# =============================================================================

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.0+cu113-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.0+cu113-cp38-cp38-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/torchaudio-0.12.0+cu113-cp38-cp38-linux_x86_64.whl"}
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"


# =============================================================================
# Development Dependencies
# =============================================================================

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"           # Framework for testing
pytest-cov = "^6.0.0"       # Code coverage for tests
black = "^24.8.0"           # Code formatter
flake8 = "^7.1.0"           # Linter for code quality
mypy = "^1.14.1"            # Static type checker
sphinx = "^8.0.2"           # Documentation generator
isort = "^5.10.1"           # Import sorter
tox = "^4.4.6"              # Testing multiple environments
pre-commit = "^4.0.1"       # Pre-commit hooks for linting and formatting


# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
